# disk-spinner

./: Cargo.toml  README.md  default.nix  flake.nix
src/: buffer.rs  crypto.rs  linux.rs  main.rs  metadata.rs  other_os.rs  read_test.rs  write_test.rs
