[package]
name = "disk-spinner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
block-utils = "0.11.1"
clap = { version = "4.4.11", features = ["derive"] }
ctr = "0.9.2"
indicatif = "0.17.7"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tracing-test = "0.2.4"
